--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ hs_err_pid*
 /jms-activemq-demo-no-xml/.idea
 /spring-boot-starter-activemq-demo/.idea
 /spring-boot-starter-demo/.idea
+/spring-boot-starter-activemq-demo/*.iml
