--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ hs_err_pid*
 /spring-boot-starter-activemq-demo/.idea
 /spring-boot-starter-demo/.idea
 /spring-boot-starter-activemq-demo/*.iml
+/spring-boot-starter-activemq-demo/logs
+/spring-boot-starter-activemq-demo/target
