--- a/jms-activemq-demo/assembly/dev/conf/app.properties
+++ b/jms-activemq-demo/assembly/dev/conf/app.properties
@@ -1,6 +1,6 @@
-application.main=com.phpdragon.jms.Application
-application.name=activemq_demo
+application.main=com.phpdragon.jms.App
+application.name=jms_activemq_demo_server
 application.owner=phpdragon
 
-mq.queue.name=Consumer.COM.MSG_PUSH.TASK.QUEUE
+mq.queue.name=COM.PHPDRAOGN.JMS.QUEUE
 mq.brokerURL=tcp://127.0.0.1:61616
