--- a/jms-activemq-demo-annotation/assembly/dev/conf/app.properties
+++ b/jms-activemq-demo-annotation/assembly/dev/conf/app.properties
@@ -1,4 +1,4 @@
-application.main=com.phpdragon.jms.Application
+application.main=com.phpdragon.jms.App
 application.name=activemq_demo
 application.owner=phpdragon
 
